クラス分け

--- a/game.html
+++ b/game.html
@@ -9,7 +9,10 @@
 </head>
 <body>
 
-  <div class="btn_wrap"><a class="btn" href="./game.html">START</a></div>
+<div class="canvas_wrap"><canvas id="canvas" width="1024" height="500"></canvas></div>
+<script src="./js/fukurou.js" defer></script>
+<script src="./js/hinotama.js" defer></script>
+ <script src="./js/common.js" defer></script>
 
 </body>
 
